--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "music-bot",
-	"version": "0.0.1",
-	"description": "An example music bot written using @discordjs/voice",
+	"name": "siyeonbot",
+	"version": "1.0.0",
+	"description": "A Music Bot written using @discordjs/voice (Only For Furious Server)",
 	"scripts": {
 		"start": "npm run build && node -r tsconfig-paths/register dist/bot",
 		"test": "echo \"Error: no test specified\" && exit 1",
