--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: siyeonbot
+    network_mode: bridge
     restart: unless-stopped
